add-ons/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: kube-system
  labels:
    name: minio
    app: minio
spec:
  selector:
    name: minio
  ports:
  - name: http
    port: 9000
    protocol: TCP
